engine/report/data/style.css
/* ... */
a {
    color: #c1a144;
    text-decoration: none;
}
p {
    margin: 1em 0 1em 0;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    width: auto;
    color: #27a052;
    margin-top: 1em;
    margin-bottom: 0.5em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
h1,
h2 {
    margin: 0;
    padding: 2px 2px 0 2px;
}
h1 {
    margin: 57px 0 0 354px;
    font-size: 28px;
    color: #008467;
}
h1 a {
    color: #c1a144;
}
h2 {
    font-size: 18px;
}
h3 {
    margin: 0;
    font-size: 16px;
}
h4 {
    font-size: 12px;
}
h5 {
    font-size: 10px;
}
a:hover,
a:active {
    color: #e1b164;
}
ul,
ol {
    padding-left: 20px;
}
ul.float,
ol.float {
    padding: 0;
    margin: 0;
}
ul.float li,
ol.float li {
    display: inline;
    padding-right: 6px;
    margin-right: 6px;
    list-style-type: none;
    border-right: 2px solid #333;
}
.clear {
    clear: both;
}
.hide,
.charts span {
    display: none;
}
.center {
    text-align: center;
}
.flex {
    display: flex;
}
.flexwrap {
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    align-content: flex-start;
}
.float {
    float: left;
}
.column-charts,
.column-tables {
    -moz-column-count: 2;
    -webkit-column-count: 2;
    column-count: 2;
    -moz-column-gap: 10px;
    -webkit-column-gap: 10px;
    column-gap: 10px;
    margin-top: 10px;
}
.column-tables {
    display: inline-block;
}
.column-tables table.sc:first-of-type,
.column-charts div.charts:first-of-type {
    margin-top: 0;
}
.mt {
    margin-top: 20px;
}
.mb {
    margin-bottom: 20px;
}
.mr {
    margin-right: 20px;
}
.ml {
    margin-left: 20px;
}
.force-wrap {
    word-wrap: break-word;
}
.nowrap {
    white-space: nowrap;
}
.mono {
    font-family: "Lucida Console", Monaco, monospace;
    font-size: 0.9em;
}
/* ... */

